Fixed a bug with several elements containing same id thereby causing P elements to fail to wrap on small screens

--- a/Home.css
+++ b/Home.css
@@ -23,12 +23,13 @@ header{
 
 #brand a {
     font-size: small;
+    font-weight: bold;
     text-decoration: none;
     color: white;
     border: 1px solid rgb(116, 167, 218);
     background-color: rgb(116, 167, 218);
     border-radius: 5px;
-    padding: 5px;
+    padding: 5px 10px;
 }
 
 #social{
